# yamil-browser

./: .env.example  .gitignore  .mcp.json  01-Ai-Notes.md  01-Fixes.md  01-Notes.md  131-YAMIL-Browser.md  132-Infrastructure-Monitoring.md  133-MCP-Microservices-Refactor.md  134-QNAPInfrastructureHub.md  135-BrowserCredentialManager.md  136-NetworkUpgrade-OmadaSDN.md  137-ServerInfrastructure-ProdDevHA.md  138-YAMILBrowser-FeatureRoadmap.md  139-FixCloudflared-WindowsPC.md  139-MultiInstance.md  140-WebContentsView-Migration.md  141-AI-Sidebar-ChatService.md  142-AI-Settings-AgenticRAG.md  143-BrowserKnowledge-OrchestratorIntegration.md  145-NetworkUpgrade-OmadaSDN-Update.md  146-YAMILBrowserErrors.md  147-AntiBot-CookieProxy.md  148-YAMIL-AI-OllamaOrchestrator.md  CLAUDE.md  Memobyte-Infrastructure-Architecture-Diagram.html  README.md  WINDOWS-PC-FIX.md  YAMILBrowserErrors.md  architecture-diagram.html  docker-compose.yml  gen-survey.mjs  homelab-ha-architecture.html  init-databases.sql  network-diagram.html  pool-survey-marked.html  setup-all.sh  start-instance-2.sh  start-with-ai.sh  yamil_browser_client.py
browser-service/: Dockerfile  package-lock.json  (+1 more)
rag-service/assemblyline-common/: pyproject.toml
rag-service/assemblyline-common/assemblyline_common/: __init__.py  config.py  encryption.py  feedback_client.py  hitl_client.py  secrets_manager.py  service_config.py
rag-service/assemblyline-common/assemblyline_common/adapters/: __init__.py  cdc_adapters.py  protocol_adapters.py  queue_adapters.py
rag-service/assemblyline-common/assemblyline_common/ai/: audit_client.py  orchestrator.py  phi_guard.py
rag-service/assemblyline-common/assemblyline_common/audit/: __init__.py
rag-service/assemblyline-common/assemblyline_common/auth/: dependencies.py  legacy_helpers.py  mfa.py  permissions.py
rag-service/assemblyline-common/assemblyline_common/business_user/: __init__.py  cep.py  lookup_tables.py
rag-service/assemblyline-common/assemblyline_common/compliance/: __init__.py  legal_hold.py  reports.py
rag-service/assemblyline-common/assemblyline_common/connectors/: __init__.py  dynamodb_connector.py  email_connector.py  fhir_connector.py  http_connector.py  ibmmq_connector.py  mllp_connector.py  mysql_cdc_connector.py  postgres_cdc_connector.py  pubsub_connector.py  rate_limiter.py  servicebus_connector.py  sftp_connector.py  x12_connector.py
rag-service/assemblyline-common/assemblyline_common/credentials/: __init__.py  master_credentials.py  setup.py
rag-service/assemblyline-common/assemblyline_common/crypto/: encryption.py
rag-service/assemblyline-common/assemblyline_common/database/: __init__.py  asyncpg_connection.py  connection.py  iam_auth.py
rag-service/assemblyline-common/assemblyline_common/discovery/: __init__.py  cloudmap.py  consul.py  kubernetes.py
rag-service/assemblyline-common/assemblyline_common/encryption/: __init__.py
rag-service/assemblyline-common/assemblyline_common/flow_designer/: data_mapper.py  python_ide.py  templates.py
rag-service/assemblyline-common/assemblyline_common/flows/: data_mapper.py
rag-service/assemblyline-common/assemblyline_common/gateway/: azure_apim.py  openapi_generator.py
rag-service/assemblyline-common/assemblyline_common/health/: dependency_checks.py  graceful_shutdown.py
rag-service/assemblyline-common/assemblyline_common/hl7/: __init__.py  esl_auto_mapper.py  esl_auto_mapper_ml.py  generator.py  parser.py
rag-service/assemblyline-common/assemblyline_common/license/: license_enforcement.py
rag-service/assemblyline-common/assemblyline_common/locks/: distributed_lock.py
rag-service/assemblyline-common/assemblyline_common/middleware/: __init__.py  security_headers.py
rag-service/assemblyline-common/assemblyline_common/models/: __init__.py
rag-service/assemblyline-common/assemblyline_common/observability/: __init__.py  langfuse_integration.py  metrics.py  phi_masking.py  setup.py  structured_logging.py  telemetry.py  tracing.py
rag-service/assemblyline-common/assemblyline_common/parsers/: pdf_extractor.py
rag-service/assemblyline-common/assemblyline_common/phi/: __init__.py  log_filter.py
rag-service/assemblyline-common/assemblyline_common/pool/: __init__.py  connection_pool.py
rag-service/assemblyline-common/assemblyline_common/retry/: idempotency.py
(+314 files in other folders)
